# siemensS7client

./: CMakeLists.txt  README.md  client.cpp  server.cpp
snap7/: CMakeLists.txt
